terraform/ark-website-backend-deployment_deprecated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ark-website-backend
  namespace: ${namespace}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ark-website-backend
  template:
    metadata:
      labels:
        app: ark-website-backend
    spec:
      containers:
        - name: ark-website-backend
          image: ${image}
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
