terraform/ark-website-frontend-deployment_deprecated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ark-website-frontend
  namespace: ${namespace}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ark-website-frontend
  template:
    metadata:
      labels:
        app: ark-website-frontend
    spec:
      containers:
        - name: ark-website-frontend
          image: ${image}
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
