terraform/fastapi-mailer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-mailer
  namespace: ${namespace}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-mailer
  template:
    metadata:
      labels:
        app: fastapi-mailer
    spec:
      containers:
        - name: fastapi-mailer
          image: ${image}
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"   # 50 millicores (0.05 CPU)
              memory: "64Mi" # 64MB RAM
            limits:
              cpu: "100m"   # 100 millicores (0.1 CPU)
              memory: "128Mi" # 128MB RAM
