terraform/ark-website-backend-service_deprecated.yaml
apiVersion: v1
kind: Service
metadata:
  name: ark-website-backend
  namespace: ${namespace}
spec:
  selector:
    app: ark-website-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
