terraform/ark-website-frontend-service_deprecated.yaml
apiVersion: v1
kind: Service
metadata:
  name: ark-website-frontend
  namespace: ${namespace}
spec:
  selector:
    app: ark-website-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
