terraform/fastapi-mailer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-mailer
  namespace: ${namespace}
spec:
  selector:
    app: fastapi-mailer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
