terraform/mktxp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mktxp-exporter
  namespace: monitoring
  annotations:
    prometheus.io/port: "49090"
    prometheus.io/scrape: "true"
spec:
  selector:
    app: mktxp-exporter
  ports:
    - port: 49090
      targetPort: 49090
