terraform/traefik-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: edge-gateway
spec:
  gatewayClassName: traefik
  listeners:
    # HTTPS termination for ArgoCD
    - name: https-argocd
      protocol: HTTPS
      port: 443
      hostname: argocd.home.schwitzd.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-argocd-ingress
      allowedRoutes:
        namespaces:
          from: All
