terraform/ark-website-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ark-website-frontend-ingress
  namespace: ${namespace}
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    cert-manager.io/cluster-issuer: "le-clusterissuer"
spec:
  ingressClassName: traefik
  rules:
    - host: ${ark_ingress_fqdn}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ark-website-frontend
                port:
                  number: 80
  tls:
    - secretName: tls-ark-website-frontend
      hosts:
        - ${ark_ingress_fqdn}
